<resources>
    <string name="app_name">Barros-Costa-TP2-2020</string>
    <string name="preference_file_key">com.example.barros_costa_tp2_2020.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="button_login">Ingresar</string>
    <string name="button_register">Registrarse</string>
    <string name="editTextHint_email">email</string>
    <string name="editTextHint_password">contraseña</string>
    <string name="textView_welcome">Bienvenido</string>
    <string name="button_back_to_login">Volver Atrás</string>
    <string name="edit_text_hint_group">Grupo</string>
    <string name="edit_text_hint_comission">Comisión</string>
    <string name="edit_text_hint_password">Contraseña</string>
    <string name="edit_text_hint_dni">DNI</string>
    <string name="edit_text_hint_lastname">Apellido</string>
    <string name="edit_text_hint_name">Nombre</string>
    <string name="edit_text_hint_email">E-mail</string>
    <string name="button_register_sensor_value">Registrar Proximidad</string>
    <string name="button_register__proximity_sensor_value">Registrar nivel de Proximidad</string>
    <string name="button_register_lux_sensor_value">Registrar nivel de luz</string>
    <string name="text_view_lux">"Sensor de luz: %1$.2f lx "</string>
    <string name="text_view_proximity">Sensor de proximidad: %1$.2f cms</string>
</resources>
