<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLux"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056">

        <TextView
            android:id="@+id/textViewLux"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/text_view_lux"
            android:textSize="30sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textViewLux1"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/text_view_lux"
            android:textSize="14sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textViewLux2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/text_view_lux"
            android:textSize="14sp"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutProximity"
        android:layout_width="346dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672">

        <TextView
            android:id="@+id/textViewProximity"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/text_view_proximity"
            android:textSize="30sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewProximity1"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/text_view_proximity" />

        <TextView
            android:id="@+id/textViewProximity2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:text="@string/text_view_proximity" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/buttonRegisterProximitySensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:text="@string/button_register__proximity_sensor_value"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProximity"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/buttonRegisterLuxSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_register_lux_sensor_value"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLux"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>